--- a/client/options-modal-en.html
+++ b/client/options-modal-en.html
@@ -12,10 +12,10 @@
           </td>
           <td>
             <div class="btn-group" data-toggle="buttons-radio">
-              <button type="button" class="btn btn-mini">Posts</button>
-              <button type="button" class="btn btn-mini">Threads</button>
-              <button type="button" class="btn btn-info btn-mini">Selection</button>
-              <button type="button" class="btn btn-mini">None</button>
+              <button type="button" class="btn btn-small"><p>Posts</p></button>
+              <button type="button" class="btn btn-small"><p>Threads</p></button>
+              <button type="button" class="btn btn-small active"><p class="text-info">Selection</p></button>
+              <button type="button" class="btn btn-small"><p>None</p></button>
             </div>
           </td>
         </tr>
@@ -25,8 +25,8 @@
           </td>
           <td>
             <div class="btn-group" data-toggle="buttons-radio">
-              <button type="button" class="btn btn-info btn-mini">On</button>
-              <button type="button" class="btn btn-mini">Off</button>
+              <button type="button" class="btn btn-small active"><p class="text-info">On</p></button>
+              <button type="button" class="btn btn-small"><p>Off</p></button>
             </div>
           </td>
         </tr>
@@ -34,7 +34,7 @@
     </table>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Close</button>
     <button class="btn btn-success">Save changes</button>
+    <button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Close</button>
   </div>
 </div>
