p in buttons replaces with span

--- a/client/options-modal-en.html
+++ b/client/options-modal-en.html
@@ -12,10 +12,10 @@
           </td>
           <td>
             <div class="btn-group" data-toggle="buttons-radio">
-              <button type="button" class="btn btn-small"><p>Posts</p></button>
-              <button type="button" class="btn btn-small"><p>Threads</p></button>
-              <button type="button" class="btn btn-small active"><p class="text-info">Selection</p></button>
-              <button type="button" class="btn btn-small"><p>None</p></button>
+              <button type="button" class="btn btn-small"><span>Posts</span></button>
+              <button type="button" class="btn btn-small"><span>Threads</span></button>
+              <button type="button" class="btn btn-small active"><span class="text-info">Selection</span></button>
+              <button type="button" class="btn btn-small"><span>None</span></button>
             </div>
           </td>
         </tr>
@@ -25,13 +25,15 @@
           </td>
           <td>
             <div class="btn-group" data-toggle="buttons-radio">
-              <button type="button" class="btn btn-small active"><p class="text-info">On</p></button>
-              <button type="button" class="btn btn-small"><p>Off</p></button>
+              <button type="button" class="btn btn-small active"><span class="text-info">On</span></button>
+              <button type="button" class="btn btn-small"><span>Off</span></button>
             </div>
           </td>
         </tr>
       </tbody>
     </table>
+    <p class="pull-right text-info"><small>Preset values are presented in this color</small></p>
+    <div class="clearfix"></div>
   </div>
   <div class="modal-footer">
     <button class="btn btn-success">Save changes</button>
