modal extended; added todo tasks to userscript

--- a/client/options-modal-en.html
+++ b/client/options-modal-en.html
@@ -1,11 +1,66 @@
 <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Modal header</h3>
+    <h3 id="myModalLabel">LoL Forum Enhance - Options</h3>
   </div>
   <div class="modal-body">
     <table class="table table-striped">
       <tbody>
+        <tr>
+          <td>
+            Check for updates automatically:
+          </td>
+          <td>
+            <div class="btn-group" data-toggle="buttons-radio">
+              <button type="button" class="btn btn-small"><span class="text-info">On</span></button>
+              <button type="button" class="btn btn-small"><span>Off</span></button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Enlarge Quick-Edit-Box:
+          </td>
+          <td>
+            <div class="btn-group" data-toggle="buttons-radio">
+              <button type="button" class="btn btn-small"><span class="text-info">On</span></button>
+              <button type="button" class="btn btn-small"><span>Off</span></button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Show own avatar next to Quick-Edit-Box:
+          </td>
+          <td>
+            <div class="btn-group" data-toggle="buttons-radio">
+              <button type="button" class="btn btn-small"><span class="text-info">On</span></button>
+              <button type="button" class="btn btn-small"><span>Off</span></button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Use Wrenchman's Tools Icons if available:
+          </td>
+          <td>
+            <div class="btn-group" data-toggle="buttons-radio">
+              <button type="button" class="btn btn-small"><span>On</span></button>
+              <button type="button" class="btn btn-small"><span class="text-info">Off</span></button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            User Forum Enhancement Kit's Icons if available:
+          </td>
+          <td>
+            <div class="btn-group" data-toggle="buttons-radio">
+              <button type="button" class="btn btn-small"><span>On</span></button>
+              <button type="button" class="btn btn-small"><span class="text-info">Off</span></button>
+            </div>
+          </td>
+        </tr>
         <tr>
           <td>
             Link usernames with:
@@ -14,19 +69,8 @@
             <div class="btn-group" data-toggle="buttons-radio">
               <button type="button" class="btn btn-small"><span>Posts</span></button>
               <button type="button" class="btn btn-small"><span>Threads</span></button>
-              <button type="button" class="btn btn-small active"><span class="text-info">Selection</span></button>
+              <button type="button" class="btn btn-small"><span class="text-info">Selection</span></button>
               <button type="button" class="btn btn-small"><span>None</span></button>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Check for updates automatically:
-          </td>
-          <td>
-            <div class="btn-group" data-toggle="buttons-radio">
-              <button type="button" class="btn btn-small active"><span class="text-info">On</span></button>
-              <button type="button" class="btn btn-small"><span>Off</span></button>
             </div>
           </td>
         </tr>
