changed appearance slightly

--- a/client/options-modal-en.html
+++ b/client/options-modal-en.html
@@ -11,7 +11,7 @@
             Check for updates automatically:
           </td>
           <td>
-            <div class="btn-group" data-toggle="buttons-radio">
+            <div class="btn-group pull-right" data-toggle="buttons-radio">
               <button type="button" class="btn btn-small"><span class="text-info">On</span></button>
               <button type="button" class="btn btn-small"><span>Off</span></button>
             </div>
@@ -22,7 +22,7 @@
             Enlarge Quick-Edit-Box:
           </td>
           <td>
-            <div class="btn-group" data-toggle="buttons-radio">
+            <div class="btn-group pull-right" data-toggle="buttons-radio">
               <button type="button" class="btn btn-small"><span class="text-info">On</span></button>
               <button type="button" class="btn btn-small"><span>Off</span></button>
             </div>
@@ -33,7 +33,7 @@
             Show own avatar next to Quick-Edit-Box:
           </td>
           <td>
-            <div class="btn-group" data-toggle="buttons-radio">
+            <div class="btn-group pull-right" data-toggle="buttons-radio">
               <button type="button" class="btn btn-small"><span class="text-info">On</span></button>
               <button type="button" class="btn btn-small"><span>Off</span></button>
             </div>
@@ -44,7 +44,7 @@
             Use Wrenchman's Tools Icons if available:
           </td>
           <td>
-            <div class="btn-group" data-toggle="buttons-radio">
+            <div class="btn-group pull-right" data-toggle="buttons-radio">
               <button type="button" class="btn btn-small"><span>On</span></button>
               <button type="button" class="btn btn-small"><span class="text-info">Off</span></button>
             </div>
@@ -55,7 +55,7 @@
             User Forum Enhancement Kit's Icons if available:
           </td>
           <td>
-            <div class="btn-group" data-toggle="buttons-radio">
+            <div class="btn-group pull-right" data-toggle="buttons-radio">
               <button type="button" class="btn btn-small"><span>On</span></button>
               <button type="button" class="btn btn-small"><span class="text-info">Off</span></button>
             </div>
@@ -66,7 +66,7 @@
             Link usernames with:
           </td>
           <td>
-            <div class="btn-group" data-toggle="buttons-radio">
+            <div class="btn-group pull-right" data-toggle="buttons-radio">
               <button type="button" class="btn btn-small"><span>Posts</span></button>
               <button type="button" class="btn btn-small"><span>Threads</span></button>
               <button type="button" class="btn btn-small"><span class="text-info">Selection</span></button>
