IDs; Options class; Load active settings into modal

--- a/client/options-modal-en.html
+++ b/client/options-modal-en.html
@@ -1,7 +1,7 @@
-<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div id="lfeOptionsModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="lfeOptionsModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">LoL Forum Enhance - Options</h3>
+    <h3 id="lfeOptionsModalLabel">LoL Forum Enhance - Options</h3>
   </div>
   <div class="modal-body">
     <table class="table table-striped">
@@ -12,8 +12,8 @@
           </td>
           <td>
             <div class="btn-group pull-right" data-toggle="buttons-radio">
-              <button type="button" class="btn btn-small"><span class="text-info">On</span></button>
-              <button type="button" class="btn btn-small"><span>Off</span></button>
+              <button id="lfe-o-updates-on" type="button" class="btn btn-small"><span class="text-info">On</span></button>
+              <button id="lfe-o-updates-off" type="button" class="btn btn-small"><span>Off</span></button>
             </div>
           </td>
         </tr>
@@ -23,8 +23,8 @@
           </td>
           <td>
             <div class="btn-group pull-right" data-toggle="buttons-radio">
-              <button type="button" class="btn btn-small"><span class="text-info">On</span></button>
-              <button type="button" class="btn btn-small"><span>Off</span></button>
+              <button id="lfe-o-enlarge-on" type="button" class="btn btn-small"><span class="text-info">On</span></button>
+              <button id="lfe-o-enlarge-off" type="button" class="btn btn-small"><span>Off</span></button>
             </div>
           </td>
         </tr>
@@ -34,8 +34,8 @@
           </td>
           <td>
             <div class="btn-group pull-right" data-toggle="buttons-radio">
-              <button type="button" class="btn btn-small"><span class="text-info">On</span></button>
-              <button type="button" class="btn btn-small"><span>Off</span></button>
+              <button id="lfe-o-avatar-on" type="button" class="btn btn-small"><span class="text-info">On</span></button>
+              <button id="lfe-o-avatar-off" type="button" class="btn btn-small"><span>Off</span></button>
             </div>
           </td>
         </tr>
@@ -45,8 +45,8 @@
           </td>
           <td>
             <div class="btn-group pull-right" data-toggle="buttons-radio">
-              <button type="button" class="btn btn-small"><span>On</span></button>
-              <button type="button" class="btn btn-small"><span class="text-info">Off</span></button>
+              <button id="lfe-o-wt-on" type="button" class="btn btn-small"><span>On</span></button>
+              <button id="lfe-o-wt-off" type="button" class="btn btn-small"><span class="text-info">Off</span></button>
             </div>
           </td>
         </tr>
@@ -56,8 +56,8 @@
           </td>
           <td>
             <div class="btn-group pull-right" data-toggle="buttons-radio">
-              <button type="button" class="btn btn-small"><span>On</span></button>
-              <button type="button" class="btn btn-small"><span class="text-info">Off</span></button>
+              <button id="lfe-o-fek-on" type="button" class="btn btn-small"><span>On</span></button>
+              <button id="lfe-o-fek-off" type="button" class="btn btn-small"><span class="text-info">Off</span></button>
             </div>
           </td>
         </tr>
@@ -67,10 +67,10 @@
           </td>
           <td>
             <div class="btn-group pull-right" data-toggle="buttons-radio">
-              <button type="button" class="btn btn-small"><span>Posts</span></button>
-              <button type="button" class="btn btn-small"><span>Threads</span></button>
-              <button type="button" class="btn btn-small"><span class="text-info">Selection</span></button>
-              <button type="button" class="btn btn-small"><span>None</span></button>
+              <button id="lfe-o-link-posts" type="button" class="btn btn-small"><span>Posts</span></button>
+              <button id="lfe-o-link-threads" type="button" class="btn btn-small"><span>Threads</span></button>
+              <button id="lfe-o-link-selection" type="button" class="btn btn-small"><span class="text-info">Selection</span></button>
+              <button id="lfe-o-link-none" type="button" class="btn btn-small"><span>None</span></button>
             </div>
           </td>
         </tr>
@@ -80,7 +80,7 @@
     <div class="clearfix"></div>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-success">Save changes</button>
-    <button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Close</button>
+    <button id="lfe-o-save" class="btn btn-success">Save changes</button>
+    <button id="lfe-o-close" class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Close</button>
   </div>
 </div>
