options modal button test

--- a/client/options-modal-en.html
+++ b/client/options-modal-en.html
@@ -81,6 +81,6 @@
   </div>
   <div class="modal-footer">
     <button id="lfe-o-save" class="btn btn-success">Save changes</button>
-    <button id="lfe-o-close" class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Close</button>
+    <button id="lfe-o-close" class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Discard changes</button>
   </div>
 </div>
