--- a/client/options-modal-en.html
+++ b/client/options-modal-en.html
@@ -11,9 +11,9 @@
             Check for updates automatically:
           </td>
           <td>
-            <div class="btn-group pull-right" data-toggle="buttons-radio">
-              <button id="lfe-o-updates-on" type="button" class="btn btn-small"><span class="text-info">On</span></button>
-              <button id="lfe-o-updates-off" type="button" class="btn btn-small"><span>Off</span></button>
+            <div id="lfe-o-updates" class="btn-group pull-right" data-toggle="buttons-radio">
+              <button id="lfe-o-updates-on" type="button" class="btn btn-small" data-value="true"><span class="text-info">On</span></button>
+              <button id="lfe-o-updates-off" type="button" class="btn btn-small" data-value="false"><span>Off</span></button>
             </div>
           </td>
         </tr>
@@ -22,9 +22,9 @@
             Enlarge Quick-Edit-Box:
           </td>
           <td>
-            <div class="btn-group pull-right" data-toggle="buttons-radio">
-              <button id="lfe-o-enlarge-on" type="button" class="btn btn-small"><span class="text-info">On</span></button>
-              <button id="lfe-o-enlarge-off" type="button" class="btn btn-small"><span>Off</span></button>
+            <div id="lfe-o-enlarge" class="btn-group pull-right" data-toggle="buttons-radio">
+              <button id="lfe-o-enlarge-on" type="button" class="btn btn-small" data-value="true"><span class="text-info">On</span></button>
+              <button id="lfe-o-enlarge-off" type="button" class="btn btn-small" data-value="false"><span>Off</span></button>
             </div>
           </td>
         </tr>
@@ -33,9 +33,9 @@
             Show own avatar next to Quick-Edit-Box:
           </td>
           <td>
-            <div class="btn-group pull-right" data-toggle="buttons-radio">
-              <button id="lfe-o-avatar-on" type="button" class="btn btn-small"><span class="text-info">On</span></button>
-              <button id="lfe-o-avatar-off" type="button" class="btn btn-small"><span>Off</span></button>
+            <div id="lfe-o-avatar" class="btn-group pull-right" data-toggle="buttons-radio">
+              <button id="lfe-o-avatar-on" type="button" class="btn btn-small" data-value="true"><span class="text-info">On</span></button>
+              <button id="lfe-o-avatar-off" type="button" class="btn btn-small" data-value="false"><span>Off</span></button>
             </div>
           </td>
         </tr>
@@ -44,9 +44,9 @@
             Use Wrenchman's Tools Icons if available:
           </td>
           <td>
-            <div class="btn-group pull-right" data-toggle="buttons-radio">
-              <button id="lfe-o-wt-on" type="button" class="btn btn-small"><span>On</span></button>
-              <button id="lfe-o-wt-off" type="button" class="btn btn-small"><span class="text-info">Off</span></button>
+            <div id="lfe-o-wt" class="btn-group pull-right" data-toggle="buttons-radio">
+              <button id="lfe-o-wt-on" type="button" class="btn btn-small" data-value="true"><span>On</span></button>
+              <button id="lfe-o-wt-off" type="button" class="btn btn-small" data-value="false"><span class="text-info">Off</span></button>
             </div>
           </td>
         </tr>
@@ -55,9 +55,9 @@
             User Forum Enhancement Kit's Icons if available:
           </td>
           <td>
-            <div class="btn-group pull-right" data-toggle="buttons-radio">
-              <button id="lfe-o-fek-on" type="button" class="btn btn-small"><span>On</span></button>
-              <button id="lfe-o-fek-off" type="button" class="btn btn-small"><span class="text-info">Off</span></button>
+            <div id="lfe-o-fek" class="btn-group pull-right" data-toggle="buttons-radio">
+              <button id="lfe-o-fek-on" type="button" class="btn btn-small" data-value="true"><span>On</span></button>
+              <button id="lfe-o-fek-off" type="button" class="btn btn-small" data-value="false"><span class="text-info">Off</span></button>
             </div>
           </td>
         </tr>
@@ -66,11 +66,11 @@
             Link usernames with:
           </td>
           <td>
-            <div class="btn-group pull-right" data-toggle="buttons-radio">
-              <button id="lfe-o-link-posts" type="button" class="btn btn-small"><span>Posts</span></button>
-              <button id="lfe-o-link-threads" type="button" class="btn btn-small"><span>Threads</span></button>
-              <button id="lfe-o-link-selection" type="button" class="btn btn-small"><span class="text-info">Selection</span></button>
-              <button id="lfe-o-link-none" type="button" class="btn btn-small"><span>None</span></button>
+            <div id="lfe-o-link" class="btn-group pull-right" data-toggle="buttons-radio">
+              <button id="lfe-o-link-posts" type="button" class="btn btn-small" data-value="posts"><span>Posts</span></button>
+              <button id="lfe-o-link-threads" type="button" class="btn btn-small" data-value="threads"><span>Threads</span></button>
+              <button id="lfe-o-link-selection" type="button" class="btn btn-small" data-value="selection"><span class="text-info">Selection</span></button>
+              <button id="lfe-o-link-none" type="button" class="btn btn-small" data-value="none"><span>None</span></button>
             </div>
           </td>
         </tr>
