--- a/client/options-modal.html
+++ b/client/options-modal.html
@@ -31,6 +31,27 @@
             </div>
           </td>
         </tr>
+        <tr>
+          <td>
+            <span id="lfe-o-captions-charset">
+              Rework charset on displayed forum usernames:
+            </span>
+          </td>
+          <td>
+            <div id="lfe-o-charset" class="btn-group pull-right" data-toggle="buttons-radio">
+              <button id="lfe-o-charset-on" type="button" class="btn btn-small" data-value="true">
+                <span id="lfe-o-captions-answers-on">
+                  On
+                </span>
+              </button>
+              <button id="lfe-o-charset-off" type="button" class="btn btn-small" data-value="false">
+                <span id="lfe-o-captions-answers-off" class="text-info">
+                  Off
+                </span>
+              </button>
+            </div>
+          </td>
+        </tr>
         <!--<tr>
           <td>
             <span class="label label-warning">soon</span> 
