--- a/client/options-modal.html
+++ b/client/options-modal.html
@@ -19,12 +19,12 @@
           <td>
             <div id="lfe-o-updates" class="btn-group pull-right" data-toggle="buttons-radio">
               <button id="lfe-o-updates-on" type="button" class="btn btn-small" data-value="true">
-                <span id="lfe-o-captions-answers-on" class="text-info">
+                <span class="text-info lfe-o-captions-answers-on">
                   On
                 </span>
               </button>
               <button id="lfe-o-updates-off" type="button" class="btn btn-small" data-value="false">
-                <span id="lfe-o-captions-answers-off">
+                <span class="lfe-o-captions-answers-off">
                   Off
                 </span>
               </button>
@@ -40,12 +40,12 @@
           <td>
             <div id="lfe-o-charset" class="btn-group pull-right" data-toggle="buttons-radio">
               <button id="lfe-o-charset-on" type="button" class="btn btn-small" data-value="true">
-                <span id="lfe-o-captions-answers-on">
+                <span class="lfe-o-captions-answers-on">
                   On
                 </span>
               </button>
               <button id="lfe-o-charset-off" type="button" class="btn btn-small" data-value="false">
-                <span id="lfe-o-captions-answers-off" class="text-info">
+                <span class="text-info lfe-o-captions-answers-off">
                   Off
                 </span>
               </button>
@@ -60,12 +60,12 @@
           <td>
             <div id="lfe-o-enlarge" class="btn-group pull-right" data-toggle="buttons-radio">
               <button id="lfe-o-enlarge-on" type="button" class="btn btn-small" data-value="true">
-                <span id="lfe-o-captions-answers-on" class="text-info">
+                <span class="text-info lfe-o-captions-answers-on">
                   On
                 </span>
               </button>
               <button id="lfe-o-enlarge-off" type="button" class="btn btn-small" data-value="false">
-                <span id="lfe-o-captions-answers-off">
+                <span class="lfe-o-captions-answers-off">
                   Off
                 </span>
               </button>
@@ -80,12 +80,12 @@
           <td>
             <div id="lfe-o-avatar" class="btn-group pull-right" data-toggle="buttons-radio">
               <button id="lfe-o-avatar-on" type="button" class="btn btn-small" data-value="true">
-                <span id="lfe-o-captions-answers-on" class="text-info">
+                <span class="text-info lfe-o-captions-answers-on">
                   On
                 </span>
               </button>
               <button id="lfe-o-avatar-off" type="button" class="btn btn-small" data-value="false">
-                <span id="lfe-o-captions-answers-off">
+                <span class="lfe-o-captions-answers-off">
                   Off
                 </span>
               </button>
@@ -100,12 +100,12 @@
           <td>
             <div id="lfe-o-wt" class="btn-group pull-right" data-toggle="buttons-radio">
               <button id="lfe-o-wt-on" type="button" class="btn btn-small" data-value="true">
-                <span id="lfe-o-captions-answers-on">
+                <span class="lfe-o-captions-answers-on">
                   On
                 </span>
               </button>
               <button id="lfe-o-wt-off" type="button" class="btn btn-small" data-value="false">
-                <span id="lfe-o-captions-answers-off" class="text-info">
+                <span class="text-info lfe-o-captions-answers-off">
                   Off
                 </span>
               </button>
@@ -120,12 +120,12 @@
           <td>
             <div id="lfe-o-fek" class="btn-group pull-right" data-toggle="buttons-radio">
               <button id="lfe-o-fek-on" type="button" class="btn btn-small" data-value="true">
-                <span id="lfe-o-captions-answers-on">
+                <span class="lfe-o-captions-answers-on">
                   On
                 </span>
               </button>
               <button id="lfe-o-fek-off" type="button" class="btn btn-small" data-value="false">
-                <span id="lfe-o-captions-answers-off" class="text-info">
+                <span class="text-info lfe-o-captions-answers-off">
                   Off
                 </span>
               </button>
@@ -140,22 +140,22 @@
           <td>
             <div id="lfe-o-link" class="btn-group pull-right" data-toggle="buttons-radio">
               <button id="lfe-o-link-posts" type="button" class="btn btn-small" data-value="posts">
-                <span id="lfe-o-captions-answers-posts">
+                <span class="lfe-o-captions-answers-posts">
                   Posts
                 </span>
               </button>
               <button id="lfe-o-link-threads" type="button" class="btn btn-small" data-value="threads">
-                <span id="lfe-o-captions-answers-threads">
+                <span class="lfe-o-captions-answers-threads">
                   Threads
                 </span>
               </button>
               <button id="lfe-o-link-selection" type="button" class="btn btn-small" data-value="selection">
-                <span id="lfe-o-captions-answers-selection" class="text-info">
+                <span class="text-info lfe-o-captions-answers-selection">
                   Selection
                 </span>
               </button>
               <button id="lfe-o-link-none" type="button" class="btn btn-small" data-value="none">
-                <span id="lfe-o-captions-answers-none">
+                <span class="lfe-o-captions-answers-none">
                   None
                 </span>
               </button>
