fixed bug which let saving the options perform a post call for certain forms

--- a/client/options-modal.html
+++ b/client/options-modal.html
@@ -174,12 +174,12 @@
     <div class="clearfix"></div>
   </div>
   <div class="modal-footer">
-    <button id="lfe-o-save" class="btn btn-success">
+    <button id="lfe-o-save" class="btn btn-success" type="button">
       <span id="lfe-o-captions-button-save">
         Save changes
       </span>
     </button>
-    <button id="lfe-o-close" class="btn btn-danger" data-dismiss="modal" aria-hidden="true">
+    <button id="lfe-o-close" class="btn btn-danger" data-dismiss="modal" aria-hidden="true" type="button">
       <span id="lfe-o-captions-button-discard">
         Discard changes
       </span>
