--- a/client/options-modal.html
+++ b/client/options-modal.html
@@ -163,6 +163,13 @@
         </tr>
       </tbody>
     </table>
+    <p class="pull-left text-warning">
+      <small>
+        <span id="lfe-o-captions-reload-info">
+          The options only take effect after you reload the page.
+        </span>
+      </small>
+    </p>
     <p class="pull-right text-info">
       <small>
         <span id="lfe-o-captions-preset-info">
