--- a/client/options-modal.html
+++ b/client/options-modal.html
@@ -1,4 +1,4 @@
-<div id="lfeOptionsModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="lfeOptionsModalLabel" aria-hidden="true">
+<div id="lfeOptionsModal" class="modal hide fade userscript-options-modal" tabindex="-1" role="dialog" aria-labelledby="lfeOptionsModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
     <h3 id="lfeOptionsModalLabel">
