changes on own avatar

--- a/client/avatar-div.html
+++ b/client/avatar-div.html
@@ -20,10 +20,12 @@
 <div class="userscript-avatar">
     <p class="post-user userscript-name" id="userscript-avatar-name">You</p>
     <div class="content-border post-avatar">
-        <a class="avatar">
-            <img id="userscript-avatar-icon" class="user_summoner_icon" src="lol_theme/img/unknown_icon.jpg" />
-            <div id="userscript-avatar-level" class="userscript-summoner-level">??</div>
-        </a>
+        <div class="userscript-avatar-image-wrapper">
+            <a class="avatar">
+                <img id="userscript-avatar-icon" class="user_summoner_icon" src="lol_theme/img/unknown_icon.jpg" />
+                <div id="userscript-avatar-level" class="userscript-summoner-level">??</div>
+            </a>
+        </div>
     </div>
     <p id="userscript-avatar-subtitle">You</p>
 </div>
