--- a/client/avatar-div.html
+++ b/client/avatar-div.html
@@ -27,5 +27,5 @@
             </a>
         </div>
     </div>
-    <p id="userscript-avatar-subtitle">You</p>
+    <p id="userscript-avatar-subtitle" class="userscript-avatar-sub">You</p>
 </div>
