--- a/client/avatar-div.html
+++ b/client/avatar-div.html
@@ -1,23 +1,4 @@
-﻿<!--<div class="userscript-avatar">
-    <div>
-        <big id="userscript-avatar-name">
-            You
-        </big>
-        <a>
-            <img id="userscript-avatar-icon" class="userscipt-user-summoner-icon" src="lol_theme/img/unknown_icon.jpg">
-            <span id="userscript-avatar-level" class="userscript-left-orb">
-                ??
-            </span>
-            <span class="userscript-right-orb">
-                <img src="http://riot-web-static.s3.amazonaws.com/forum/ui/avatar_right_orb_blue.png">
-            </span>
-        </a>
-        <small id="userscript-avatar-subtitle">You
-        </small>
-    </div>
-</div>-->
-
-<div class="userscript-avatar">
+﻿<div class="userscript-avatar">
     <p class="post-user userscript-name" id="userscript-avatar-name">You</p>
     <div class="content-border post-avatar">
         <div class="userscript-avatar-image-wrapper">
