Testing new options modal

--- a/client/options-modal.html
+++ b/client/options-modal.html
@@ -1,13 +1,13 @@
-<div id="lfeOptionsModal" class="modal hide fade userscript-options-modal" tabindex="-1" role="dialog" aria-labelledby="lfeOptionsModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="lfeOptionsModalLabel">
+<div id="lfeOptionsModal" class="userscript-options-modal">
+  <div class="header">
+    <button type="button" class="userscript-options-modal-close">×</button>
+    <h3 class="title">
       <span id="lfe-o-captions-title">
         LoL Forum Enhance - Options
       </span>
     </h3>
   </div>
-  <div class="modal-body">
+  <div class="body">
     <table class="table table-striped">
       <tbody>
         <tr>
@@ -163,29 +163,29 @@
         </tr>
       </tbody>
     </table>
-    <p class="pull-left text-warning">
+    <p class="userscript-pull-left userscript-text-warning">
       <small>
         <span id="lfe-o-captions-reload-info">
           The options only take effect after you reload the page.
         </span>
       </small>
     </p>
-    <p class="pull-right text-info">
+    <p class="userscript-pull-right userscript-text-info">
       <small>
         <span id="lfe-o-captions-preset-info">
           Preset values are presented in this color
         </span>
       </small>
     </p>
-    <div class="clearfix"></div>
+    <div class="userscript-clearfix"></div>
   </div>
-  <div class="modal-footer">
-    <button id="lfe-o-save" class="btn btn-success" type="button">
+  <div class="footer">
+    <button id="lfe-o-save" class="userscript-options-modal-close" type="button">
       <span id="lfe-o-captions-button-save">
         Save changes
       </span>
     </button>
-    <button id="lfe-o-close" class="btn btn-danger" data-dismiss="modal" aria-hidden="true" type="button">
+    <button id="lfe-o-close" class="userscript-options-modal-close" type="button">
       <span id="lfe-o-captions-button-discard">
         Discard changes
       </span>
