save/discard button styles changed

--- a/client/options-modal.html
+++ b/client/options-modal.html
@@ -180,12 +180,12 @@
     <div class="userscript-clearfix"></div>
   </div>
   <div class="footer userscript-pull-right">
-    <button id="lfe-o-save" class="userscript-options-modal-close" type="button">
+    <button id="lfe-o-save" class="userscript-options-modal-close userscript-btn btn-success" type="button">
       <span id="lfe-o-captions-button-save">
         Save changes
       </span>
     </button>
-    <button id="lfe-o-close" class="userscript-options-modal-close" type="button">
+    <button id="lfe-o-close" class="userscript-options-modal-close userscript-btn btn-danger" type="button">
       <span id="lfe-o-captions-button-discard">
         Discard changes
       </span>
