modal x button style changed

--- a/client/options-modal.html
+++ b/client/options-modal.html
@@ -1,6 +1,6 @@
 <div id="lfeOptionsModal" class="userscript-options-modal">
   <div class="header">
-    <button type="button" class="userscript-options-modal-close">×</button>
+    <button type="button" class="userscript-options-modal-close userscript-btn btn-x">×</button>
     <h1 class="title">
       <span id="lfe-o-captions-title">
         LoL Forum Enhance - Options
@@ -179,16 +179,18 @@
     </p>
     <div class="userscript-clearfix"></div>
   </div>
-  <div class="footer userscript-pull-right">
-    <button id="lfe-o-save" class="userscript-options-modal-close userscript-btn btn-success" type="button">
-      <span id="lfe-o-captions-button-save">
-        Save changes
-      </span>
-    </button>
-    <button id="lfe-o-close" class="userscript-options-modal-close userscript-btn btn-danger" type="button">
-      <span id="lfe-o-captions-button-discard">
-        Discard changes
-      </span>
-    </button>
+  <div class="footer">
+    <div class="userscript-pull-right userscript-btn-group">
+      <button id="lfe-o-save" class="userscript-options-modal-close userscript-btn btn-success" type="button">
+        <span id="lfe-o-captions-button-save">
+          Save changes
+        </span>
+      </button>
+      <button id="lfe-o-close" class="userscript-options-modal-close userscript-btn btn-danger" type="button">
+        <span id="lfe-o-captions-button-discard">
+          Discard changes
+        </span>
+      </button>
+    </div>
   </div>
 </div>
