glyphicons usage added

--- a/client/options-modal.html
+++ b/client/options-modal.html
@@ -182,11 +182,13 @@
   <div class="footer">
     <div class="userscript-pull-right userscript-btn-group">
       <button id="lfe-o-save" class="userscript-options-modal-close userscript-btn btn-success" type="button">
+        <i class="userscript-icon-white userscript-icon-ok"></i> 
         <span id="lfe-o-captions-button-save">
           Save changes
         </span>
       </button>
       <button id="lfe-o-close" class="userscript-options-modal-close userscript-btn btn-danger" type="button">
+        <i class="userscript-icon-white userscript-icon-remove"></i> 
         <span id="lfe-o-captions-button-discard">
           Discard changes
         </span>
