--- a/client/update-alert.html
+++ b/client/update-alert.html
@@ -1,14 +1,43 @@
-<div id="lfe-update-alert" class="alert container" style="top: 10px; position: relative; z-index: 100; width: 550px;">
-  <button id="lfe-update-dismiss" type="button" class="close" data-dismiss="alert">&times;</button>
-  <h5 style="margin: 0;">
-    Updates available.
-  </h5>
-  <p>
-    There is a newer Version of LoL Forum Enhance available. Click here to install the latest updates.
-  </p>
-  <p style="margin-bottom: 0;">
-    <a id="lfe-update-install" class="btn btn-warning" href="#">
-      Update
-    </a>
-  </p>
+<div id="lfeUpdatesModal" class="userscript-options-modal">
+    <div class="header">
+        <!--<button type="button" class="userscript-options-modal-close userscript-btn btn-x">×</button>-->
+        <h1 class="title">
+            <span id="">Updates available</span>
+        </h1>
+    </div>
+    <div class="body">
+        <p>
+            <span id="">There is a newer Version of LoL Forum Enhance available. Click here to install the latest updates.</span>
+        </p>
+        <table class="userscript-table">
+            <tr>
+                <td>
+                    <span id="">Your version:</span>
+                </td>
+                <td>
+                    <span id="">0.0.0</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <span id="">New version:</span>
+                </td>
+                <td>
+                    <span id="">0.0.0</span>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="footer">
+        <div class="userscript-pull-right userscript-btn-group">
+            <button id="lfe-update-install" class="userscript-update-modal-close userscript-btn btn-success" type="button">
+                <i class="userscript-icon-white userscript-icon-download"></i> 
+                <span id="">Update now.</span>
+            </button>
+            <button id="lfe-update-dismiss" class="userscript-update-modal-close userscript-btn btn-danger" type="button">
+                <i class="userscript-icon-white userscript-icon-time"></i> 
+                <span id="">Do it later.</span>
+            </button>
+        </div>
+    </div>
 </div>
