updates modal localization added; bugfixes

--- a/client/update-alert.html
+++ b/client/update-alert.html
@@ -1,29 +1,29 @@
 <div id="lfeUpdatesModal" class="userscript-updates-modal">
     <div class="header">
-        <!--<button type="button" class="userscript-options-modal-close userscript-btn btn-x">×</button>-->
+        <button type="button" class="userscript-update-modal-close userscript-btn btn-x">×</button>
         <h1 class="title">
-            <span id="">Updates available</span>
+            <span id="lfe-u-captions-title">Updates available</span>
         </h1>
     </div>
     <div class="body">
         <p>
-            <span id="">There is a newer Version of LoL Forum Enhance available. Click here to install the latest updates.</span>
+            <span id="lfe-u-captions-text">There is a newer Version of LoL Forum Enhance available. Please click the button to update and confirm the installation window.</span>
         </p>
         <table class="userscript-table">
             <tr>
                 <td>
-                    <span id="">Your version:</span>
+                    <span id="lfe-u-captions-own-version">Your version:</span>
                 </td>
                 <td>
-                    <span id="">0.0.0</span>
+                    <span id="userscript-own-version">0.0.0</span>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <span id="">New version:</span>
+                    <span id="lfe-u-captions-new-version">New version:</span>
                 </td>
                 <td>
-                    <span id="">0.0.0</span>
+                    <span id="userscript-new-version">0.0.0</span>
                 </td>
             </tr>
         </table>
@@ -32,11 +32,11 @@
         <div class="userscript-pull-right userscript-btn-group">
             <button id="lfe-update-install" class="userscript-update-modal-close userscript-btn btn-success" type="button">
                 <i class="userscript-icon-white userscript-icon-download"></i> 
-                <span id="">Update now.</span>
+                <span id="lfe-u-captions-button-update">Update now.</span>
             </button>
             <button id="lfe-update-dismiss" class="userscript-update-modal-close userscript-btn btn-danger" type="button">
                 <i class="userscript-icon-white userscript-icon-time"></i> 
-                <span id="">Do it later.</span>
+                <span id="lfe-u-captions-button-dismiss">Do it later.</span>
             </button>
         </div>
     </div>
