--- a/client/update-alert.html
+++ b/client/update-alert.html
@@ -1,6 +1,6 @@
 <div id="lfeUpdatesModal" class="userscript-updates-modal">
     <div class="header">
-        <button type="button" class="userscript-update-modal-close userscript-btn btn-x">×</button>
+        <!--<button type="button" class="userscript-update-modal-close userscript-btn btn-x">×</button>-->
         <h1 class="title">
             <span id="lfe-u-captions-title">Updates available</span>
         </h1>
