--- a/client/update-alert.html
+++ b/client/update-alert.html
@@ -30,20 +30,22 @@
     </div>
     <div class="footer">
         <table class="userscript-pull-right userscript-btn-group">
-            <tr>
-                <td>
-                    <button id="lfe-update-install" class="userscript-update-modal-close userscript-btn btn-success" type="button">
-                        <i class="userscript-icon-white userscript-icon-download"></i> 
-                        <span id="lfe-u-captions-button-update">Update now.</span>
-                    </button>
-                </td>
-                <td>
-                    <button id="lfe-update-dismiss" class="userscript-update-modal-close userscript-btn btn-danger" type="button">
-                        <i class="userscript-icon-white userscript-icon-time"></i> 
-                        <span id="lfe-u-captions-button-dismiss">Do it later.</span>
-                    </button>
-                </td>
-            </tr>
+            <tbody>
+                <tr>
+                    <td>
+                        <button id="lfe-update-install" class="userscript-update-modal-close userscript-btn btn-success" type="button">
+                            <i class="userscript-icon-white userscript-icon-download"></i> 
+                            <span id="lfe-u-captions-button-update">Update now.</span>
+                        </button>
+                    </td>
+                    <td>
+                        <button id="lfe-update-dismiss" class="userscript-update-modal-close userscript-btn btn-danger" type="button">
+                            <i class="userscript-icon-white userscript-icon-time"></i> 
+                            <span id="lfe-u-captions-button-dismiss">Do it later.</span>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
         </table>
     </div>
 </div>
