Colorfix added to options; style tags now with ids; style tags can now get enabled/disabled during runtime

--- a/client/options-modal.html
+++ b/client/options-modal.html
@@ -161,12 +161,31 @@
             </div>
           </td>
         </tr>
+        <tr>
+          <td>
+            <span id="lfe-o-captions-colorfix">Emulate the old forums design:</span>
+          </td>
+          <td>
+            <div id="lfe-o-colorfix" class="userscript-btn-group userscript-pull-right" data-toggle="buttons-radio">
+              <button id="lfe-o-colorfix-on" type="button" class="userscript-btn" data-value="true">
+                <span class="lfe-o-captions-answers-on">
+                  On
+                </span>
+              </button>
+              <button id="lfe-o-colorfix-off" type="button" class="userscript-btn" data-value="false">
+                <span class="lfe-o-captions-answers-off userscript-text-info">
+                  Off
+                </span>
+              </button>
+            </div>
+          </td>
+        </tr>
       </tbody>
     </table>
     <p class="userscript-pull-left userscript-text-warning">
       <small>
         <span id="lfe-o-captions-reload-info">
-          The options only take effect after you reload the page.
+          Some options only take effect after you reload the page.
         </span>
       </small>
     </p>
